# heimdall

./: README.md  beorn.service  config.example.yaml  heimdall.service  pyproject.toml
beorn/: __init__.py  __main__.py  cli.py  config.py  eagles.py  engine.py  fim.py  policy.py  reporter.py  security.py  skinchanger.py  starlight.py  state.py  updater.py  woodsman.py
heimdall/: __init__.py  __main__.py  cli.py  config.py  policy.py  reporter.py  scanner.py  security.py  updater.py
scripts/: install.sh  migrate.sh
