[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beorn-agent"
version = "0.1.0"
description = "Lightweight security & update agent — watches over your machines, reports to Mithrandir"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.scripts]
beorn = "beorn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["beorn"]
